[package]
name = "create-bundle-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "3.0.0"
tokio = "1.49.0"
transaction-monitor = { git = "https://github.com/miaomiaowu0428/transaction-monitor.git" }
solana-tx-parser = { git = "https://github.com/miaomiaowu0428/solana-tx-parser.git" }
solana-ix-collection = { git = "https://github.com/miaomiaowu0428/solana-ix-collection.git" }
# transaction-monitor = {path = "../transaction-monitor"}
# solana-tx-parser = { version = "0.1.0", path = "../solana-tx-parser" }
utils = { git = "https://github.com/miaomiaowu0428/sol-utils.git" }
grpc-client = { git = "https://github.com/miaomiaowu0428/grpc-client.git" }
dotenvy = "0.15.7"
log = "0.4.29"
rustls = "0.23.36"
heed = { version = "0.20", features = ["serde-bincode"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.6.0"
async-trait = "0.1.89"
bincode = "1.3"
